--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link
       rel="shortcut icon"
-      href="/assets/icon-2c7f551e.png"
+      href="https://florianrumpel.github.io/DinspoSubmitPage/assets/icon-2c7f551e.png"
       type="image/x-icon"
     />
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
