--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       href="https://florianrumpel.github.io/dinsposubmitpage/assets/icon-2c7f551e.png"
       type="image/x-icon"
     />
+     <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
